spacing fix

--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -109,7 +109,7 @@
 
 @media screen and (max-width: 414px) {
     .sidebar {
-        width: 230px;
+        width: 250px;
     }
 
     .sidebar-header {
@@ -118,5 +118,10 @@
         right: 15px;
         justify-content: space-between;
         height: 60px;
+    }
+
+    .sidebar-footer-txt {
+        margin-top: 500px;
+        margin-left: 0px;
     }
 }
